Build a total table component.

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <title>Coffee Masters</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+
+    </table>
+  </body>
 </html>
