Set a maximum width for the entire page.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <head>
-      <!-- TODO:What a mess! Refactor all of that! -->
+      <!-- TODO:What a mess! I know I'll fix it later
+        and Refactor all these bad practice  -->
       <nav class="hero">
         <img
           src="https://btholt.github.io/complete-intro-to-web-dev-v3/images/coffee_masters_logo.png"
@@ -18,7 +19,7 @@
         <h1 class="hero__heading">Coffee Masters</h1>
       </nav>
     </head>
-    <main class="order-page">
+    <main class="block order-page">
       <div class="box order__name">
         <h2 class="box__heading">Name</h2>
         <div class="input-group">
