--- a/preview-card/index.html
+++ b/preview-card/index.html
@@ -16,8 +16,8 @@
         <p class="card__date">Published 21 Dec 2023</p>
       </div>
       <div class="card__body">
-        <h1>HTML & CSS foundations</h1>
-        <p class="card__post">These languages are the backbone of every website, defining structure, content, and presentation</p>
+        <h1 class="card__heading">HTML & CSS foundations</h1>
+        <p class="card__post">These languages are the backbone of every website, defining structure, content, and presentation.</p>
         <div class="card__publisher">
           <img class="card__avatar" src="assets/images/image-avatar.webp" alt="">
           <h2>Ibrahim Essam</h2>
