--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -6,5 +6,36 @@
     <link rel="stylesheet" href="style.css" />
     <title>Recipe - The Testiest Out There</title>
   </head>
-  <body></body>
+  <body>
+    <ol class="list">
+      <li class="item">
+        <span class="emphasized">Beat the eggs</span>: In a bowl, beat the eggs
+        with a pinch of salt and pepper until they are well mixed. You can add a
+        tablespoon of water or milk for a fluffier texture.
+      </li>
+      <li class="item">
+        <span class="emphasized">Heat the pan</span>: Place a non-stick frying
+        pan over medium heat and add butter or oil
+      </li>
+      <li class="item">
+        <span class="emphasized">Cook the omelette</span>: Once the butter is
+        melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs
+        evenly coat the surface.
+      </li>
+      <li class="item">
+        <span class="emphasized">Add filling (optional)</span>: When the eggs
+        begin to set at the edges but are still slightly runny in the middle,
+        sprinkle your chosen fillings over one half of the omelette
+      </li>
+      <li class="item">
+        <span class="emphsized">Fold and serve</span>: As the omelette continues
+        to cook, carefully lift one edge and fold it over the fillings. Let it
+        cook for another minute, then slide it onto a plate
+      </li>
+      <li class="item">
+        <span class="emphasized">Enjoy</span> : Serve hot, with additional salt
+        and pepper if needed
+      </li>
+    </ol>
+  </body>
 </html>
