Build the first iteration of the recipe page.

--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -7,35 +7,108 @@
     <title>Recipe - The Testiest Out There</title>
   </head>
   <body>
-    <ol class="list">
-      <li class="item">
-        <span class="emphasized">Beat the eggs</span>: In a bowl, beat the eggs
-        with a pinch of salt and pepper until they are well mixed. You can add a
-        tablespoon of water or milk for a fluffier texture.
-      </li>
-      <li class="item">
-        <span class="emphasized">Heat the pan</span>: Place a non-stick frying
-        pan over medium heat and add butter or oil
-      </li>
-      <li class="item">
-        <span class="emphasized">Cook the omelette</span>: Once the butter is
-        melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs
-        evenly coat the surface.
-      </li>
-      <li class="item">
-        <span class="emphasized">Add filling (optional)</span>: When the eggs
-        begin to set at the edges but are still slightly runny in the middle,
-        sprinkle your chosen fillings over one half of the omelette
-      </li>
-      <li class="item">
-        <span class="emphsized">Fold and serve</span>: As the omelette continues
-        to cook, carefully lift one edge and fold it over the fillings. Let it
-        cook for another minute, then slide it onto a plate
-      </li>
-      <li class="item">
-        <span class="emphasized">Enjoy</span> : Serve hot, with additional salt
-        and pepper if needed
-      </li>
-    </ol>
+    <div class="wrapper">
+      <header class="recipe__header">
+        <img
+          class="recipe__img"
+          src="assets/images/image-omelette.jpeg"
+          alt=""
+        />
+      </header>
+      <main class="recipe__body">
+        <h1 class="recipe__heading">Simple Omelette Recipe</h1>
+        <p class="recipe__desc">
+          An easy and quick dish, perfect for any meal. This classic omelette
+          combines beaten eggs cooked to perfection, optionally filled with your
+          choice of cheese, vegetables, or meats.
+        </p>
+        <section class="recipe__preparation">
+          <h2 class="preparation__heading">Preparation time</h2>
+          <ul class="list">
+            <li class="item">
+              <span class="emphasized">Total</span>: Approximately 10 minutes
+            </li>
+            <li class="item">
+              <span class="emphasized">Preparation</span>: 5 minutes
+            </li>
+            <li class="item">
+              <span class="emphasized">Cooking</span>: 5 minutes
+            </li>
+          </ul>
+        </section>
+        <section class="recipe__instruction">
+          <h2 class="recipe__instruction">Ingredients</h2>
+          <ul class="list list--with-border">
+            <li class="item">2-3 large eggs</li>
+            <li class="item">Salt, to taste</li>
+            <li class="item">Pepper, to taste</li>
+            <li class="item">1 tablespoon of butter or oil</li>
+            <li class="item">
+              Optional fillings: cheese, diced vegetables, cooked meats, herbs
+            </li>
+          </ul>
+        </section>
+        <section class="recipe__instruction">
+          <h2 class="recipe__instruction">Instruction</h2>
+          <ol class="list list--with-border">
+            <li class="item">
+              <span class="emphasized">Beat the eggs</span>: In a bowl, beat the
+              eggs with a pinch of salt and pepper until they are well mixed.
+              You can add a tablespoon of water or milk for a fluffier texture.
+            </li>
+            <li class="item">
+              <span class="emphasized">Heat the pan</span>: Place a non-stick
+              frying pan over medium heat and add butter or oil
+            </li>
+            <li class="item">
+              <span class="emphasized">Cook the omelette</span>: Once the butter
+              is melted and bubbling, pour in the eggs. Tilt the pan to ensure
+              the eggs evenly coat the surface.
+            </li>
+            <li class="item">
+              <span class="emphasized">Add filling (optional)</span>: When the
+              eggs begin to set at the edges but are still slightly runny in the
+              middle, sprinkle your chosen fillings over one half of the
+              omelette
+            </li>
+            <li class="item">
+              <span class="emphsized">Fold and serve</span>: As the omelette
+              continues to cook, carefully lift one edge and fold it over the
+              fillings. Let it cook for another minute, then slide it onto a
+              plate
+            </li>
+            <li class="item">
+              <span class="emphasized">Enjoy</span> : Serve hot, with additional
+              salt and pepper if needed
+            </li>
+          </ol>
+        </section>
+        <section class="recipe__nutrition">
+          <h2 class="nutrition__heading">Nutrition</h2>
+          <p>
+            The table below shows nutritional values per serving without the
+            additional fillings.
+          </p>
+          <div class="wrapper">
+            <div class="nutrition__aspect">
+              <p class="nutrition__calories">Calories</p>
+              <p class="nutrition__qty">277kcal</p>
+            </div>
+            <div class="nutrition__aspect">
+              <p class="nutrition__calories">Carbs</p>
+              <p class="nutrition__qty">0g</p>
+            </div>
+            <div class="nutrition__aspect">
+              <p class="nutrition__calories">Protein</p>
+              <p class="nutrition__qty">20g</p>
+            </div>
+            <div class="nutrition__aspect">
+              <p class="nutrition__calories">Fat</p>
+              <p class="nutrition__qty">22g</p>
+            </div>
+          </div>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
