--- a/faq-accordion-main/index.html
+++ b/faq-accordion-main/index.html
@@ -7,6 +7,97 @@
     <title>FAQs</title>
   </head>
   <body>
+    <div class="wrapper">
+      <img
+        class="faq-bg"
+        src="images/background-pattern-mobile.svg"
+        alt=""
+        srcset="images/background-pattern-mobile.svg 400w, images/background-pattern-desktop.svg 768w" />
+      <section class="card">
+        <div class="card__header">
+          <img class="card__icon" src="images/icon-star.svg" alt="" />
+          <h1 class="card__heading">FAQs</h1>
+        </div>
+        <div class="card__content">
+          <section class="collapsible collapsible--expanded">
+            <header class="collapsible__header">
+              <h2 class="collapsible__heading">What is Frontend Mentor, and how will it help me?</h2>
+              <img
+                class="collapsible__chevron collapsible__minus"
+                src="images/icon-minus.svg"
+                alt=""
+              />
+              <img
+                class="collapsible__chevron collapsible__plus"
+                src="images/icon-plus.svg"
+                alt=""
+              />
+            </header>
+            </header>
+            <div class="collapsible__content">
+              Frontend Mentor offers realistic coding challenges to help
+              developers improve their frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for all levels and ideal for portfolio building.
+            </div>
+          </section>
+          <section class="collapsible">
+            <header class="collapsible__header">
+              <h2 class="collapsible__heading">Is Frontend Mentor free?</h2>
+              <img
+                class="collapsible__chevron collapsible__minus"
+                src="images/icon-minus.svg"
+                alt=""
+              />
+              <img
+                class="collapsible__chevron collapsible__plus"
+                src="images/icon-plus.svg"
+                alt=""
+              />
+            </header>
+            <div class="collapsible__content">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod, quidem!
+            </div>
+          </section>
+          <section class="collapsible">
+            <header class="collapsible__header">
+              <h2 class="collapsible__heading">Can I use Frontend Mentor projects in my portfolio?</h2>
+              <img
+                class="collapsible__chevron collapsible__minus"
+                src="images/icon-minus.svg"
+                alt=""
+              />
+              <img
+                class="collapsible__chevron collapsible__plus"
+                src="images/icon-plus.svg"
+                alt=""
+              />
+            </header>
+            <div class="collapsible__content">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod, quidem!
+            </div>
+          </section>
+          <section class="collapsible">
+            <header class="collapsible__header">
+              <h2 class="collapsible__heading">
+                How can I get help if I'm stuck on a challenge?
+              </h2>
+              <img
+                class="collapsible__chevron collapsible__minus"
+                src="images/icon-minus.svg"
+                alt=""
+              />
+              <img
+                class="collapsible__chevron collapsible__plus"
+                src="images/icon-plus.svg"
+                alt=""
+              />
+            </header>
+            <div class="collapsible__content">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod, quidem!
+            </div>
+          </section>
+        </div>
+      </section>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
