Style the button & input component.

--- a/shopping/index.html
+++ b/shopping/index.html
@@ -8,14 +8,14 @@
   </head>
 
   <body>
-    <div class="shopping-list">
+    <section class="shopping-list">
       <form class="shopping" autocomplete="off">
-        <input type="text" name="item" id="item" />
-        <button type="submit">+ Add Item</button>
+        <input class="input" type="text" name="item" id="item" />
+        <button class="btn" type="submit">+ Add Item</button>
       </form>
 
       <ul class="list"></ul>
-    </div>
+    </section>
 
     <script src="./shopping.js"></script>
   </body>
