Add all functionality to the project.

--- a/shopping/index.html
+++ b/shopping/index.html
@@ -10,13 +10,13 @@
   <body>
     <section class="shopping-list">
       <form class="shopping" autocomplete="off">
-        <input class="input" type="text" name="item" id="item" />
+        <input class="input" type="text" name="item" id="item" required />
         <button class="btn" type="submit">+ Add Item</button>
       </form>
 
       <ul class="list"></ul>
     </section>
 
-    <script src="./shopping.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
