Clear everything and start over.

--- a/result-summary-component/index.html
+++ b/result-summary-component/index.html
@@ -12,71 +12,5 @@
     <link rel="stylesheet" href="style.css" />
     <title>Result Summary</title>
   </head>
-  <body>
-    <section class="card">
-      <div class="card__header block">
-        <p>Your Result</p>
-        <div class="circle">
-          <p class="circle__number">76</p>
-          <p class="circle__max">of 100</p>
-        </div>
-        <h1 class="card__heading">Great</h1>
-        <p class="card__desc">
-          You scored higher than 65% of the people who have taken these tests.
-        </p>
-      </div>
-      <div class="card__content">
-        <h3 class="card__summary">Summary</h3>
-        <div class="block">
-          <ul class="list">
-            <li class="item">
-              <div class="item item--reaction">
-                <div class="item__name">
-                  <img src="images/icon-reaction.svg" alt="" />
-                  <span class="item__title">Reaction</span>
-                </div>
-                <p class="item__score">
-                  80 <span class="item__max">/ 100</span>
-                </p>
-              </div>
-            </li>
-            <li class="item">
-              <div class="item item--memory">
-                <div class="item__name">
-                  <img src="images/icon-memory.svg" alt="" />
-                  <span class="item__title">Reaction</span>
-                </div>
-                <p class="item__score">
-                  80 <span class="item__max">/ 100</span>
-                </p>
-              </div>
-            </li>
-            <li class="item">
-              <div class="item item--verbal">
-                <div class="item__name">
-                  <img src="images/icon-verbal.svg" alt="" />
-                  <span class="item__title">Reaction</span>
-                </div>
-                <p class="item__score">
-                  80 <span class="item__max">/ 100</span>
-                </p>
-              </div>
-            </li>
-            <li class="item">
-              <div class="item item--visual">
-                <div class="item__name">
-                  <img src="images/icon-visual.svg" alt="" />
-                  <span class="item__title">Reaction</span>
-                </div>
-                <p class="item__score">
-                  80 <span class="item__max">/ 100</span>
-                </p>
-              </div>
-            </li>
-          </ul>
-          <button class="btn btn--primary">GitHub</button>
-        </div>
-      </div>
-    </section>
-  </body>
+  <body></body>
 </html>
