Build a handle submit, display items, mirror to LS, and restore from LS functions.

--- a/result-summary-component/index.html
+++ b/result-summary-component/index.html
@@ -12,5 +12,69 @@
     <link rel="stylesheet" href="style.css" />
     <title>Result Summary</title>
   </head>
-  <body></body>
+  <body>
+    <section class="card grid grid--1x2">
+      <div class="card__header">
+        <p>Your Result</p>
+        <div class="circle">
+          <h1 class="circle__result">76</h1>
+          <p class="circle__max">of 100</p>
+        </div>
+        <h2 class="card__heading">Great</h2>
+        <p class="card__desc">
+          You scored higher than 65% of the people who have taken these tests.
+        </p>
+      </div>
+      <div class="card__content block">
+        <h2>Summary</h2>
+        <ul class="list">
+          <li>
+            <div class="item item--reaction">
+              <div class="item__name">
+                <img src="images/icon-reaction.svg" alt="" />
+                <h3 class="item__aspect">Reaction</h3>
+              </div>
+              <div class="item__score">
+                80 <span class="grayout">/ 100</span>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="item item--memory">
+              <div class="item__name">
+                <img src="images/icon-memory.svg" alt="" />
+                <h3 class="item__aspect">Memory</h3>
+              </div>
+              <div class="item__score">
+                80 <span class="grayout">/ 100</span>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="item item--verbal">
+              <div class="item__name">
+                <img src="images/icon-verbal.svg" alt="" />
+                <h3 class="item__aspect">Verbal</h3>
+              </div>
+              <div class="item__score">
+                80 <span class="grayout">/ 100</span>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="item item--visual">
+              <div class="item__name">
+                <img src="images/icon-visual.svg" alt="" />
+                <h3 class="item__aspect">Visual</h3>
+              </div>
+              <div class="item__score">
+                80 <span class="grayout">/ 100</span>
+              </div>
+            </div>
+          </li>
+        </ul>
+        <button class="btn btn--primary">Continue</button>
+      </div>
+    </section>
+  </body>
 </html>
