--- a/shopping/index.html
+++ b/shopping/index.html
@@ -14,15 +14,7 @@
         <button class="btn" type="submit">+ Add Item</button>
       </form>
 
-      <ul class="list">
-        <li class="shopping-item">
-          <input value="id" type="checkbox" checked />
-          <span class="itemName">🥩 Meat</span>
-          <button class="btn btn--delete" aria-label="Remove ${item.name}">
-            &times;
-          </button>
-        </li>
-      </ul>
+      <ul class="list"></ul>
     </section>
 
     <script src="script.js"></script>
