Make it responsive.

--- a/result-summary-component/index.html
+++ b/result-summary-component/index.html
@@ -29,7 +29,7 @@
         <h2>Summary</h2>
         <ul class="list">
           <li>
-            <div class="item item--reaction">
+            <div class="item item--reaction" aria-label="reaction">
               <div class="item__name">
                 <img src="images/icon-reaction.svg" alt="" />
                 <h3 class="item__aspect">Reaction</h3>
@@ -40,7 +40,7 @@
             </div>
           </li>
           <li>
-            <div class="item item--memory">
+            <div class="item item--memory" aria-label="memory">
               <div class="item__name">
                 <img src="images/icon-memory.svg" alt="" />
                 <h3 class="item__aspect">Memory</h3>
@@ -51,7 +51,7 @@
             </div>
           </li>
           <li>
-            <div class="item item--verbal">
+            <div class="item item--verbal" aria-label="verbal">
               <div class="item__name">
                 <img src="images/icon-verbal.svg" alt="" />
                 <h3 class="item__aspect">Verbal</h3>
@@ -62,7 +62,7 @@
             </div>
           </li>
           <li>
-            <div class="item item--visual">
+            <div class="item item--visual" aria-label="visual">
               <div class="item__name">
                 <img src="images/icon-visual.svg" alt="" />
                 <h3 class="item__aspect">Visual</h3>
@@ -73,8 +73,10 @@
             </div>
           </li>
         </ul>
-        <button class="btn btn--primary">Continue</button>
+        <button class="btn">Continue</button>
       </div>
     </section>
+
+    <script src="script.js"></script>
   </body>
 </html>
