--- a/product-preview-card/index.html
+++ b/product-preview-card/index.html
@@ -3,14 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@700&family=Montserrat:ital,wght@500,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css" />
     <title>Preview Card</title>
   </head>
-  <body></body>
+  <body>
+    <section class="card">
+      <div class="card__header">
+        <img
+          class="card__product"
+          src="images/image-product-mobile.jpg"
+          alt=""
+          srcset="
+            images/image-product-mobile.jpg  600w,
+            images/image-product-desktop.jpg 768w
+          "
+        />
+      </div>
+      <div class="card__content">
+        <p class="card__tagline">Perfume</p>
+        <h1 class="card__heading">Gabrielle Essence Eau De Parfum</h1>
+        <p class="card__desc">
+          A floral, solar and voluptuous interpretation composed by Olivier
+          Polge, Perfumer-Creator for the House of CHANEL.
+        </p>
+        <h2 class="card__price">$149.99</h2>
+        <button class="btn">
+          <img class="btn__icon" src="images/icon-cart.svg" alt="" />
+          Add to Cart
+        </button>
+      </div>
+    </section>
+  </body>
 </html>
