--- a/product-preview-card/index.html
+++ b/product-preview-card/index.html
@@ -23,6 +23,7 @@
             images/image-product-mobile.jpg  600w,
             images/image-product-desktop.jpg 768w
           "
+          sizes="(max-width: 600px) 100vw, (max-width: 768px) 80vw, 100vw"
         />
       </div>
       <div class="card__content">
