Build a circle component.

--- a/interactive-rating-component/index.html
+++ b/interactive-rating-component/index.html
@@ -12,5 +12,12 @@
     <link rel="stylesheet" href="style.css" />
     <title>Interactive Rating Component</title>
   </head>
-  <body></body>
+  <body>
+    <div class="circle circle--rating" tabindex="0">
+      <span class="number">1</span>
+    </div>
+    <div class="circle" tabindex="0">
+      <img src="images/icon-star.svg" alt="" />
+    </div>
+  </body>
 </html>
