Make the card responsive.

--- a/interactive-rating-component/index.html
+++ b/interactive-rating-component/index.html
@@ -12,17 +12,5 @@
     <link rel="stylesheet" href="style.css" />
     <title>Interactive Rating Component</title>
   </head>
-  <body>
-    <div class="card card--thanks">
-      <img class="card__img" src="images/illustration-thank-you.svg" alt="" />
-      <span class="badge">
-        <p class="badge__text">You selected x out of 5</p>
-      </span>
-      <h1 class="card__heading">Thank you!</h1>
-      <p class="card__desc">
-        We appreciate you taking the time to give a rating. if you ever need
-        more support, don't hesitate to get in touch!
-      </p>
-    </div>
-  </body>
+  <body></body>
 </html>
