--- a/interactive-rating-component/index.html
+++ b/interactive-rating-component/index.html
@@ -12,5 +12,71 @@
     <link rel="stylesheet" href="style.css" />
     <title>Interactive Rating Component</title>
   </head>
-  <body></body>
+  <body>
+    <div class="card">
+      <div class="circle" tabindex="0">
+        <img src="images/icon-star.svg" alt="" />
+      </div>
+      <h1 class="card__heading">How did we do?</h1>
+      <p class="card__desc">
+        Please let us know how we did with your support request. All feedback is
+        appreciated to help us improve our offering!
+      </p>
+      <ul class="list">
+        <li>
+          <div
+            class="circle circle--rating"
+            tabindex="0"
+            aria-label="rating number"
+            value="1"
+          >
+            <span class="number">1</span>
+          </div>
+        </li>
+        <li>
+          <div
+            class="circle circle--rating"
+            tabindex="0"
+            aria-label="rating number"
+            value="2"
+          >
+            <span class="number">2</span>
+          </div>
+        </li>
+        <li>
+          <div
+            class="circle circle--rating"
+            tabindex="0"
+            aria-label="rating number"
+            value="3"
+          >
+            <span class="number">3</span>
+          </div>
+        </li>
+        <li>
+          <div
+            class="circle circle--rating"
+            tabindex="0"
+            aria-label="rating number"
+            value="4"
+          >
+            <span class="number">4</span>
+          </div>
+        </li>
+        <li>
+          <div
+            class="circle circle--rating"
+            tabindex="0"
+            aria-label="rating number"
+            value="5"
+          >
+            <span class="number">5</span>
+          </div>
+        </li>
+      </ul>
+      <button class="btn">Submit</button>
+    </div>
+
+    <script src="script.js"></script>
+  </body>
 </html>
