--- a/state-perview-card/index.html
+++ b/state-perview-card/index.html
@@ -12,5 +12,33 @@
     <link rel="stylesheet" href="style.css" />
     <title>State Card</title>
   </head>
-  <body></body>
+  <body>
+    <section class="card">
+      <div class="card__header">
+        <img class="card__img" src="images/image-header-mobile.jpg" alt="" />
+      </div>
+      <div class="card__content">
+        <h1 class="card__heading">
+          Get <span class="card__colored">insights</span> that help your
+          business grow.
+        </h1>
+        <p class="card__desc">
+          Discover the benefits of data analytics and make better decisions
+          regarding revenue, customer experience, and overall efficiency.
+        </p>
+        <div class="card__item">
+          <h2>10k+</h2>
+          <p>Companies</p>
+        </div>
+        <div class="card__item">
+          <h2>314</h2>
+          <p>Templates</p>
+        </div>
+        <div class="card__item">
+          <h2>12M+</h2>
+          <p>Queries</p>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
