--- a/state-perview-card/index.html
+++ b/state-perview-card/index.html
@@ -35,18 +35,26 @@
           Discover the benefits of data analytics and make better decisions
           regarding revenue, customer experience, and overall efficiency.
         </p>
-        <div class="card__item">
-          <h2>10k+</h2>
-          <p>Companies</p>
-        </div>
-        <div class="card__item">
-          <h2>314</h2>
-          <p>Templates</p>
-        </div>
-        <div class="card__item">
-          <h2>12M+</h2>
-          <p>Queries</p>
-        </div>
+        <ul class="card__list">
+          <li>
+            <div class="card__item">
+              <h2>10k+</h2>
+              <p>Companies</p>
+            </div>
+          </li>
+          <li>
+            <div class="card__item">
+              <h2>314</h2>
+              <p>Templates</p>
+            </div>
+          </li>
+          <li>
+            <div class="card__item">
+              <h2>12M+</h2>
+              <p>Queries</p>
+            </div>
+          </li>
+        </ul>
       </div>
     </section>
   </body>
